fix(Atoms/Table/Container): Don't allow overflow...

--- a/packages/core/src/components/atoms/table-container/table-container.component.scss
+++ b/packages/core/src/components/atoms/table-container/table-container.component.scss
@@ -1,5 +1,5 @@
 :host {
-	@apply flex flex-col w-full;
+	@apply flex flex-col w-full overflow-hidden;
 	@apply bg-white rounded-large;
 }
 
